--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div>
     <input type="text" id="promoCode" placeholder="Enter your Promo Code" />
     <input type="date" id="filterDate" />
-    <button onclick="fetchMessages()">View Messages</button>
+    <button onclick="fetchMessages()" style="background-color: green; color: white;">View Messages</button>
   </div>
   <div class="error" id="errorMsg"></div>
   <table id="messagesTable" style="display:none;">
