--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   You can share your Promo Code with your users, allowing them to send you messages at no cost. Users on the Safaricom network can send SMS offline by texting their message to the shortcode <strong>40015</strong>.<br><br>
 
   <strong>Example message:</strong><br>
-  <em>Masomo Give me details regarding your program and the applicable fees please. 255896</em><br>
+  <em><span style="color:red;">Masomo</span> Give me details regarding your program and the applicable fees please. <span style="color:red;">255896</span></em><br>
   <small>(Note: The Promo Code <strong>"255896"</strong> should appear at the end of the message.)</small><br><br>
 
   Once the message is sent, you will be able to view both the message content and the sender's phone number directly on your dashboard. The user does <strong>not</strong> need to have airtime to send the message.
