--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <input type="text" id="promoCode" placeholder="Enter your Promo Code" />
     <input type="date" id="filterDate" />
     <button onclick="fetchMessages()" style="background-color: green; color: white;">View Messages</button>
-  </div>
+<button onclick="window.location.href='https://masomodigital.github.io/sms-credits-balance/'" style="background-color: red; color: white;">Get my Promo Code</button>
+ </div>
   <div class="error" id="errorMsg"></div>
   <table id="messagesTable" style="display:none;">
     <thead>
