--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>View Messages by Promo Code</title>
   <style>
     body {
@@ -17,11 +18,36 @@
       padding: 10px;
       margin: 5px;
       font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .form-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      margin-bottom: 10px;
+    }
+    .error {
+      color: red;
+      font-weight: bold;
+      margin-top: 10px;
+      text-align: center;
+    }
+    .waiting {
+      color: green;
+      font-weight: bold;
+      margin-top: 10px;
+      text-align: center;
+    }
+    .table-container {
+      overflow-x: auto;
     }
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
+      min-width: 600px;
     }
     th, td {
       padding: 10px;
@@ -31,48 +57,43 @@
       background: #2c3e50;
       color: white;
     }
-    .error {
-      color: red;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    .waiting {
-      color: green;
-      font-weight: bold;
-      margin-top: 10px;
-    }
   </style>
 </head>
 <body>
   <h1>View Messages by Promo Code</h1>
 
-<div style="background-color: #e6f2ff; border: 1px solid #b3d1ff; padding: 15px; margin-bottom: 20px; border-radius: 5px; font-size: 16px; line-height: 1.6;">
-  <strong>Share Your Promo Code to Receive Messages for FREE!</strong><br><br>
-  You can share your Promo Code with your users, allowing them to send you messages at no cost. Users on the Safaricom network can send SMS offline by texting their message to the shortcode <strong>40015</strong>.<br><br>
+  <div style="background-color: #e6f2ff; border: 1px solid #b3d1ff; padding: 15px; margin-bottom: 20px; border-radius: 5px; font-size: 16px; line-height: 1.6;">
+    <strong>Share Your Promo Code to Receive Messages for FREE!</strong><br><br>
+    You can share your Promo Code with your users, allowing them to send you messages at no cost. Users on the Safaricom network can send SMS offline by texting their message to the shortcode <strong>40015</strong>.<br><br>
 
-  <strong>Example message:</strong><br>
-  <em><span style="color:red;">Masomo</span> Give me details regarding your program and the applicable fees please. <span style="color:red;">255896</span></em><br>
-  <small>(Note: The Promo Code <strong>"255896"</strong> should appear at the end of the message.)</small><br><br>
+    <strong>Example message:</strong><br>
+    <em><span style="color:red;">Masomo</span> Give me details regarding your program and the applicable fees please. <span style="color:red;">255896</span></em><br>
+    <small>(Note: The Promo Code <strong>"255896"</strong> should appear at the end of the message.)</small><br><br>
 
-  Once the message is sent, you will be able to view both the message content and the sender's phone number directly on your dashboard. The user does <strong>not</strong> need to have airtime to send the message.
-</div>
-<div>
+    Once the message is sent, you will be able to view both the message content and the sender's phone number directly on your dashboard. The user does <strong>not</strong> need to have airtime to send the message.
+  </div>
+
+  <div class="form-container">
     <input type="text" id="promoCode" placeholder="Enter your Promo Code" />
     <input type="date" id="filterDate" />
     <button onclick="fetchMessages()" style="background-color: green; color: white;">View Messages</button>
-<button onclick="window.location.href='https://masomodigital.github.io/sms-credits-balance/'" style="background-color: red; color: white;">Get my Promo Code</button>
- </div>
+    <button onclick="window.location.href='https://masomodigital.github.io/sms-credits-balance/'" style="background-color: red; color: white;">Get my Promo Code</button>
+  </div>
+
   <div class="error" id="errorMsg"></div>
-  <table id="messagesTable" style="display:none;">
-    <thead>
-      <tr>
-        <th>Source Phone</th>
-        <th>Message</th>
-        <th>Timestamp</th>
-      </tr>
-    </thead>
-    <tbody id="messagesBody"></tbody>
-  </table>
+
+  <div class="table-container">
+    <table id="messagesTable" style="display:none;">
+      <thead>
+        <tr>
+          <th>Source Phone</th>
+          <th>Message</th>
+          <th>Timestamp</th>
+        </tr>
+      </thead>
+      <tbody id="messagesBody"></tbody>
+    </table>
+  </div>
 
   <script>
     const scriptURL = "https://script.google.com/macros/s/AKfycbycpL9-mDmnDcIGThuA4uRfOcqJ07LRLrT7hvDkOJ7jKUtAJrmUQ97Ac-HGtOZqEjZNwQ/exec";
