--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
     <input type="text" id="promoCode" placeholder="Enter your Promo Code" />
     <input type="date" id="filterDate" />
     <button onclick="fetchMessages()" style="background-color: green; color: white;">View Messages</button>
-    <button onclick="window.location.href='https://masomodigital.github.io/sms-credits-balance/'" style="background-color: red; color: white;">Get my Promo Code</button>
-  </div>
+<button onclick="window.location.href='https://masomodigital.github.io/sms-credits-balance/'" style="background-color: red; color: white;">Get my Promo Code</button>
+<button onclick="window.location.href='https://masomodigital.github.io/REVERSE-SMS/'" style="background-color: black; color: white;">Reverse SMS</button>
+</div>
 
   <div class="error" id="errorMsg"></div>
 
