--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
     <strong>Example message:</strong><br>
     <span style="color:blue;">
-  <em><span style="color:red;">Masomo</span> Give me details regarding your program and the applicable fees please. <span style="color:red;">255896</span></em>
+  <em><span style="color:red;">Masomo</span> I shall be visiting you on Saturday at 2.00pm. Thanks, Dan <span style="color:red;">255896</span></em>
 </span><br>
     <small>(Note: The Promo Code <strong>"255896"</strong> should appear at the end of the message.)</small><br><br>
 
-    Once the message is sent, you will be able to view both the message content and the sender's phone number directly on your dashboard. The user does <strong>not</strong> need to have airtime to send the message.
+    Once the message is sent, you will be able to view both the message content and the sender's phone number directly on your dashboard. The user does <strong>NOT</strong> need to have airtime to send the message.
   </div>
 
   <div class="form-container">
