--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <h1>View Messages by Promo Code</h1>
 
   <div style="background-color: #e6f2ff; border: 1px solid #b3d1ff; padding: 15px; margin-bottom: 20px; border-radius: 5px; font-size: 16px; line-height: 1.6;">
-    <strong>Share Your Promo Code to Receive Messages for FREE!</strong><br><br>
+    <strong>Share Your Promo Code to Receive Messages for <span style="color:red;">FREE!</span></strong><br><br>
     You can share your Promo Code with your users, allowing them to send you messages at no cost. Users on the Safaricom network can send SMS offline by texting their message to the shortcode <strong>40015</strong>.<br><br>
 
     <strong>Example message:</strong><br>
