--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <h1>Promo Code Login</h1>
   <input type="text" id="loginCode" placeholder="Enter your Promo Code" />
   <br />
-  <button onclick="login()">Login</button>
+  <button onclick="login()" style="background-color: green; color: white;">Login</button>
   <div id="loginError" class="error"></div>
 </div>
 
