--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 <body>
 
 <div id="login-container">
-  <h1>Promo Code Login</h1>
+  <h1>User Login</h1>
+<p style="color: blue; font-weight: bold;">Login to view your messages.</p>
   <input type="text" id="loginCode" placeholder="Enter your Promo Code" />
   <br />
   <button onclick="login()" style="background-color: green; color: white;">Login</button>
