--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <div id="login-container">
   <img src="https://i.imgur.com/ZZxgHlA.jpeg" alt="Login Image" style="max-width: 200px; margin-bottom: 20px;" />
-  <h1>Promo Code Login</h1>
+  <h1>User Login</h1>
   <p style="color: blue; font-weight: bold;">Login to view your messages.</p>
   <input type="text" id="loginCode" placeholder="Enter your Promo Code" />
   <br />
