--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
   <input type="text" id="loginCode" placeholder="Enter your Promo Code" />
   <br />
   <button onclick="login()" style="background-color: green; color: white;">Login</button>
+  
+  <br /><br />
+  <button onclick="window.location.href='https://masomodigital.github.io/POST-A-MESSAGE/'" style="background-color: black; color: white; width: 100%;">POST MESSAGE TO MY CONTACTS</button>
+  
+  <br /><br />
+  <button onclick="window.location.href='https://masomodigital.github.io/post-message/'" style="background-color: red; color: white; width: 100%;">VIEW MESSAGES FROM USER</button>
+  
   <div id="loginError" class="error"></div>
 </div>
 
