--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
     .info-box {
       background-color: #e6f2ff;
       border: 1px solid #b3d1ff;
-      padding: 18px;
+      padding: 14px;
       margin-bottom: 20px;
       border-radius: 8px;
-      font-size: 16px;
-      line-height: 1.6;
+      font-size: 14px;  /* smaller font */
+      line-height: 1.4;
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
 
@@ -157,16 +157,11 @@
   <h1>View Messages by Promo Code</h1>
 
   <div class="info-box">
-    <strong>Share Your Promo Code to Receive Messages for <span style="color:red;">FREE!</span></strong><br><br>
-    You can share your Promo Code with your users, allowing them to send you messages at no cost. Users on the Safaricom network can send SMS offline by texting their message to the shortcode <strong><span style="color:red;">40015</span></strong>.<br><br>
-
-    <strong>Example message:</strong><br>
-    <span style="color:blue;">
-      <em><span style="color:red;">Masomo</span> I shall be visiting you on Saturday at 2.00pm. Thanks, Dan <span style="color:red;">255896</span></em>
-    </span><br>
-    <small>(Note: The Promo Code <strong>"255896"</strong> should appear at the end of the message.)</small><br><br>
-
-    Once the message is sent, you will be able to view both the message content and the sender's phone number directly on your dashboard. The user does <strong>NOT</strong> need to have airtime to send the message.
+    <strong>Share Your Promo Code for FREE Messages!</strong><br><br>
+    Give your Promo Code to users so they can text you at no cost via shortcode <strong style="color:red;">40015</strong>.  
+    Example: <span style="color:blue;"><em>Masomo I shall be visiting you on Saturday at 2.00pm. Thanks, Dan <span style="color:red;">255896</span></em></span>  
+    (Promo Code must appear at the end).  
+    You’ll instantly see the message content and sender’s phone number on your dashboard. Airtime is not required.
   </div>
 
   <div class="form-container">
