--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 </div>
 
 <div id="main-content">
-  <h1>View Messages by Promo Code</h1>
+  <h1>View Messages</h1>
 
   <div class="info-box">
     <strong>Share Your Promo Code for FREE Messages!</strong><br><br>
